[package]
name = "acitx_project_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.3.1"}
serde = {version="1", features = ["derive"]}
serde_json = {version="1"}
futures = {version="0.3"}
derive_more = {version="0.99"}
env_logger = "0.10"
log = "0.4"